--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "ctApi in express, with mongodb",
+  "description": "epos API in express, with mongodb",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node server.js"
+    "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shrikantgond/epos_express_api.git"
+  },
+  "keywords": [
+    "zeit",
+    "express",
+    "expressjs"
+  ],
   "author": "Shrikant Gond",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shrikantgond/epos_express_api/issues"
+  },
+  "homepage": "https://github.com/shrikantgond/epos_express_api#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "config": "^1.30.0",
-    "connect-mongodb-session": "^2.0.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.3.0",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.1.1",
+    "cors": "^2.8.5",
+    "express-session": "^1.16.1",
+    "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
-    "mongoose": "^5.1.7",
-    "nexe": "^2.0.0-rc.34"
+    "mongoose": "^5.5.11"
   }
 }
